--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 button {
   color: #000;
   font-size: 36px;
-
+  font-weight: bold;
   padding: 1rem 3rem;
   cursor: pointer;
   border-radius: 1rem;
